# GitMul

./: .gitignore  ACCESSIBILITY_TEST.md  CHANGELOG.md  CLAUDE.md  PERFORMANCE_REPORT.md  README-GIT.md  README.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  TDD_GUIDE.md  TEST_EXECUTION_GUIDE.md  USAGE_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  test-branch-management.sh  test-korean.bat  test-korean.sh  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml
src/: App.tsx  App.tsx.backup  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: amend.rs  amend_tests.rs  branch.rs  bundle.rs  cherrypick.rs  clone.rs  config.rs  conflict.rs  diff.rs  git.rs  history.rs  merge.rs  mod.rs  models.rs  rebase.rs  reflog.rs  remote.rs  repos.rs  revert.rs  shell.rs  stash.rs  tags.rs  utils.rs
src-tauri/src/tests/: branch_tests.rs  diff_tests.rs  integration_tests.rs  korean_encoding_tests.rs  mod.rs  remote_tests.rs
src/components/: AccessibilitySettings.tsx  BranchManager.tsx  BundleManager.tsx  CherryPickDialog.tsx  CloneDialog.tsx  CommitDetailPanel.tsx  CommitDialog.tsx  CommitGraph.tsx  CommitHistory.tsx  ConflictResolver.tsx  DiffViewer.tsx  FileChanges.tsx  FileHistory.tsx  ForkSidebar.tsx  ImageDiff.tsx  MenuBar.tsx  MergeDialog.tsx  ReflogViewer.tsx  RemoteManager.tsx  RepoSettingsPanel.tsx  ResizeHandle.tsx  RevertDialog.tsx  ShortcutHelp.tsx  Sidebar.tsx  Skeleton.tsx  StashManager.tsx  TabBar.tsx  TagManager.tsx  Toast.tsx  (+2 more)
(+15 files in other folders)
