[package]
name = "gitmul"
version = "0.1.0"
description = "Fork-like Git GUI with Korean support"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.18"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
unicode-normalization = "0.1"
lazy_static = "1.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "gitmul"
path = "src/main.rs"
